--- a/app/styles/includes/content/index.scss
+++ b/app/styles/includes/content/index.scss
@@ -13,6 +13,17 @@
     padding: 0 0 40px;
   }
 
+  // hardcode
+  .manual__header + .container {
+    padding-left: 0;
+    padding-right: 0;
+
+    @include desktop {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+
   .content__ad {
     width: 240px;
     height: 360px;
